# trial_student

./: .gitignore  AGENTS.md  README.md  design.md  frontend.md  plan.md  requirements.md  todo.md
backend/: .env.example  README.md  alembic.ini  cookies-jwt-middleware-and-authentication.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260525_0001_persistence_workflow.py  20260525_0002_auth_sessions.py
backend/app/: main.py
backend/app/api/v1/: router.py  routes_auth.py  routes_health.py  routes_referrals.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/database/: session.py
backend/app/middleware/: auth.py  rate_limit.py
backend/app/models/: referral.py
backend/app/permissions/: dependencies.py  roles.py
backend/app/schemas/: auth.py  referral.py
backend/app/services/: auth.py  referrals.py
backend/tests/: conftest.py  test_auth_cookie.py  test_referral_contracts.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/components/: Field.tsx  StatusPill.test.tsx  StatusPill.tsx
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  ReferralDetailPage.tsx  ReferralFormPage.test.tsx  ReferralFormPage.tsx
frontend/src/routes/: AppRoutes.tsx  ProtectedRoute.tsx
frontend/src/services/: api.ts  auth.ts  referrals.ts
frontend/src/store/: authStore.ts
frontend/src/types/: auth.ts  referral.ts
frontend/src/utils/: labels.test.ts  labels.ts
