[project]
name = "student-care-referral-backend"
version = "0.1.0"
description = "FastAPI backend for the Student Care Referral System MVP"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "email-validator==2.2.0",
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "passlib[bcrypt]==1.7.4",
    "psycopg[binary]==3.2.3",
    "pydantic-settings==2.7.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.20",
    "SQLAlchemy==2.0.36",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
